--- a/project/package.json
+++ b/project/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://haarisrahmnyr.github.io/Personal-Webpage",
+  "homepage": "https://haarisrmnyr.github.io/Personal-Webpage",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
